--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,9 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  h1 Timestamp api
+  h3 Example
+  p https://timestamp-sugarball.herokuapp.com/1450137600
+
+  h4 Result
+  p {"unix":1450137600,"natural":"December 15, 2015"}
